--- a/.github/workflows/build_vb1980_k2p_512_kvr.yml
+++ b/.github/workflows/build_vb1980_k2p_512_kvr.yml
@@ -31,7 +31,7 @@ env:
   TOOLCHAIN_URL: https://github.com/hanwckf/padavan-toolchain/releases/download/v1.1/mipsel-linux-uclibc.tar.xz
   WORK_PATH: /opt/rt-n56u
   TIME_ZONE: Asia/Shanghai
-  TARGET_NAME: K2P-512
+  TARGET_NAME: MI-MINI
   FIRMWARE_DATEPREFIX: $(date +"%Y%m%d")
   FIRMWARE_AUTHOR: vb1980
   FIRMWARE_PATH: /opt/firmwares
